--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yu-Gi-Oh</title>
   </head>
-  <body>
+  <body class="bg-warning">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
